Fix jQuery tags, adjust header spacing

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -132,6 +132,6 @@
     height: $iconSize !important;
   }
   #title {
-    margin-top: 0 !important;
+    margin-top: 20px !important;
   }
 }
